[gd_scene load_steps=2 format=3 uid="uid://7ofok8df5pwq"]

[ext_resource type="Script" path="res://scripts/collision_message.gd" id="1_4h0u4"]

[node name="CollisionMessage" type="Node2D"]
script = ExtResource("1_4h0u4")

[node name="MsgFrame" type="Polygon2D" parent="."]
clip_children = 1
position = Vector2(0, -32)
color = Color(1, 0.136114, 0.536052, 1)
polygon = PackedVector2Array(0, 0, 96, 0, 96, 32, 0, 32)

[node name="MsgPlaque" type="Polygon2D" parent="MsgFrame"]
position = Vector2(0, 32)
color = Color(0.556863, 0.556863, 0.556863, 0.752941)
polygon = PackedVector2Array(0, 0, 96, 0, 96, 32, 0, 32)

[node name="MsgTxt" type="Label" parent="MsgFrame/MsgPlaque"]
offset_right = 96.0
offset_bottom = 32.0
text = "Collision!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
